Fixes caret margin in search filters toggle on mobile [fixes #158046593]

--- a/app/assets/stylesheets/spree/frontend/search_filters.sass
+++ b/app/assets/stylesheets/spree/frontend/search_filters.sass
@@ -13,8 +13,8 @@
 
     .caret-circle
       position: absolute
-      margin-left: 32px
-      margin: auto 0 auto 32px
+      margin: auto 0 auto
+      margin-left: 20px
       top: 0
       bottom: 0
 
